--- a/sortable-item-app/client/package.json
+++ b/sortable-item-app/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "react-sortable-hoc": "^0.8.3"
+    "react-sortable-hoc": "^0.8.3",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
